# Draft3D

./: .gitignore  GUI.py  LaunchComfyUI.bat  LaunchGUI.bat  OPEN_SOURCE_CHECKLIST.md  README.md  RunAll.bat  prompt_presets.json  pyproject.toml  requirements.txt
docs/: COMFYUI_SETUP.md  DEVELOPMENT.md  INSTALL.md  TROUBLESHOOTING.md  USAGE.md
scripts/: launch_comfyui.bat  run_gui.py
src/draft3d/: __init__.py  comfy_client.py  config.py  io_utils.py  operations.py  workflows.py
src/draft3d_gui/: __init__.py  app.py  main_window.py
