[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "draft3d-gui"
version = "0.1.0"
description = "Draft3D GUI and core tools for 3D content generation based on ComfyUI"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Draft3D authors" }
]
dependencies = [
  "numpy",
  "requests",
  "PySide6",
  "pyvista",
  "pyvistaqt",
  "vtk",
]

[project.urls]
Homepage = "https://github.com/tian-works/Draft3D"

[tool.setuptools.packages.find]
where = ["src"]

